# caribou

./: .gitignore  Makefile  README.md  caribou  caribou.py  mise.toml  modules.md  pylint.rc  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
caribou/: __init__.py  cli.py  migrate.py
examples/: directory_migrations.py  migrate_directory.py  migrate_modules.py  module_migrations.py
examples/migrations/: v20260206024658_create_users.py  v20260206024701_create_scores.py
tests/: test_caribou.py  test_cli.sh
tests/invalid_migrations/code/: 20091112130101_syntax_error.py  20091112150200_missing_upgrade.py  20091112150205_missing_downgrade.py
tests/migrations/: 20091112130101__migration_one.py  20091112150200__migration_two.py  20091112150205_migration_three.py
tests/mixed_migrations/: 20091112130101__old_style.py  v20091112150200_new_style.py
