[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "caribou"
authors = [{name = "Matt Perpick", email = "clutchski@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.10"
license = "Unlicense"
keywords = ["sqlite", "migrations", "database"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Home = "https://github.com/clutchski/caribou"

[project.scripts]
caribou = "caribou.cli:main"

[dependency-groups]
dev = ["pytest==9.0.2", "tox==4.34.1", "ruff>=0.11"]

[tool.ruff]
line-length = 88
exclude = [".git", ".venv", ".tox"]

[tool.ruff.lint.per-file-ignores]
"caribou/__init__.py" = ["F401"]
